# sdg4pipeline

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  update_for_real_ghs.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: control_file_template.csv
data/outputs/ZAF_2022_GHS2022/: indicators.csv  indicators_wide.xlsx  qa_flags.csv
data/raw/: .gitkeep  ZAF_2022_GHS2022_persons.csv
scripts/: write_all_fixes.py
src/gem_pipeline/: __init__.py  cli.py  config_loader.py  pipeline.py
src/gem_pipeline/docs/: __init__.py  methodological_notes.py
src/gem_pipeline/harmonization/: __init__.py  harmonizer.py
src/gem_pipeline/indicators/: __init__.py  compute.py
src/gem_pipeline/ingestion/: __init__.py  preprocessors.py  reader.py  registry.py
src/gem_pipeline/output/: __init__.py  exporter.py  wide_scope_formatter.py
src/gem_pipeline/quality/: __init__.py  qa_checks.py
tests/: conftest.py  test_formatter.py  test_notes.py  test_pipeline.py
