[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gem-sdg4-pipeline"
version = "0.1.0"
description = "GEM Report SDG 4 household survey indicator pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1", "numpy>=1.26", "pyreadstat>=1.2", "pyarrow>=14.0",
    "pyyaml>=6.0", "rich>=13.0", "typer>=0.9", "openpyxl>=3.1",
    "scipy>=1.11", "statsmodels>=0.14", "matplotlib>=3.8",
    "seaborn>=0.13", "loguru>=0.7", "pydantic>=2.5",
]
[project.optional-dependencies]
dev = ["pytest>=7.4","pytest-cov>=4.1","black>=23.0","flake8>=6.0","mypy>=1.5","pre-commit>=3.5"]
[project.scripts]
gem-pipeline = "gem_pipeline.cli:app"
[tool.setuptools.packages.find]
where = ["src"]
[tool.black]
line-length = 100
target-version = ["py310", "py311"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gem_pipeline --cov-report=term-missing"
